...
    <string name="map_text_week">Last 7 days</string>
    <string name="map_text_month">Last 30 days</string>
    <string name="map_dialog_title">There is a new map, do you want to update?</string>
    <string name="select_date">Select a date</string>
    <string name="text_loading">-</string>
    <string name="green_circle_desc">Green Circle</string>
    <string name="next_button_1" tools:ignore="TypographyFractions"><![CDATA[Next (1/3) >]]></string>
    <string name="next_button_2"><![CDATA[Next (2/3) >]]></string>
    <string name="next_button_3"><![CDATA[Next (3/3) >]]></string>
    <string name="heart_icon_desc">Health measurement</string>
    <string name="start_and_stop_recording">Start and stop recording</string>
    <string name="cancel_recording">Cancel recording</string>
    <string name="recording_cancelled">Recording cancelled. No reports will be generated.</string>
    <string name="tutorial_text_1_2">If you have a Fitbit device, set it up using the Fitbit app (<![CDATA[<a href="https://play.google.com/store/apps/details?id=com.fitbit.FitbitMobile">download</a>]]>). Then, link Soundless with Fitbit in the Configuration menu.</string>
    <string name="tutorial_text_2_2">Go to the <b>Analysis</b> screen and start recording ▶.\n\nKeeping the app running at night, while sleeping, is recommended.\n\nIf you have a bracelet, wear it <b>during</b> the recording.</string>
...
